fix: url input icon alignment

--- a/editors/style.css
+++ b/editors/style.css
@@ -491,3 +491,7 @@ h6,
 p {
   color: var(--color-gray-900);
 }
+
+input[type="url"] {
+  padding-left: 32px;
+}
